--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -24,7 +24,7 @@
 }
 
 .site-title {
-  @include relative-font-size(2);
+  @include relative-font-size(1.8);
   font-weight: 400;
   margin-bottom: 0;
   float: left;
@@ -34,9 +34,9 @@
   // // position: relative;
   // text-align: center;
 
-  @include media-query($on-palm) {
-    padding-right: 45px;
-  }
+  // @include media-query($on-palm) {
+  //   padding-right: $spacing-unit;
+  // }
 
   &,
   &:visited {
